--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="This website enables user to build RPA bots by using modeling languages like BPMN"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon-192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
