--- a/client_src_components_App.jsx.html
+++ b/client_src_components_App.jsx.html
@@ -7,7 +7,7 @@
   
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title> client/src/components/content/PropertiesPanel/PropertiesPanelApplicationDropdown/PropertiesPanelApplicationDropdown.jsx</title>
+  <title> client/src/components/App.jsx</title>
 
   <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
@@ -76,7 +76,7 @@
             <div class="content">
                 <header class="page-title">
                     <p>Source</p>
-                    <h1>client/src/components/content/PropertiesPanel/PropertiesPanelApplicationDropdown/PropertiesPanelApplicationDropdown.jsx</h1>
+                    <h1>client/src/components/App.jsx</h1>
                 </header>
                 
 
@@ -85,41 +85,33 @@
     
     <section>
         <article>
-            <pre class="prettyprint source linenums"><code>/* eslint-disable react/prop-types */
-import React from 'react';
-import { Select } from 'antd';
-import '../PropertiesPanel.css';
-
-const { Option } = Select;
+            <pre class="prettyprint source linenums"><code>import React from 'react';
+import { BrowserRouter, Route, Switch } from 'react-router-dom';
+import Modeler from './pages/Modeler/Modeler';
+import Home from './pages/Home/Home';
+import Error from './pages/Error/Error';
+import RobotFile from './pages/RobotFile/RobotFile';
+import './App.css';
 
 /**
- * @description Renders the application-dropdown based on passed list of applications.
+ * @description route component of the application
  * @category Client
  * @component
  */
-const PropertiesPanelApplicationDropdown = ({
-  onApplicationSelection,
-  currentSelection,
-  applications,
-}) => (
-  &lt;>
-    &lt;Select
-      className='properties-panel-dropdown'
-      showSearch
-      placeholder='Please select application'
-      onChange={onApplicationSelection}
-      defaultValue={currentSelection}
-    >
-      {applications.map((application) => (
-        &lt;Option key={application} value={application}>
-          {application}
-        &lt;/Option>
-      ))}
-    &lt;/Select>
-  &lt;/>
+const App = () => (
+  &lt;BrowserRouter>
+    &lt;div>
+      &lt;Switch>
+        &lt;Route path='/' component={Home} exact />
+        &lt;Route path='/modeler' component={Modeler} />
+        &lt;Route path='/robotfile' component={RobotFile} />
+        &lt;Route component={Error} />
+      &lt;/Switch>
+    &lt;/div>
+  &lt;/BrowserRouter>
 );
 
-export default PropertiesPanelApplicationDropdown;
+export default App;
 </code></pre>
         </article>
     </section>
